Fixed the positioning of navbar, and realigned 4 circles to change fluidly across all screen sizes

--- a/css/design.css
+++ b/css/design.css
@@ -35,8 +35,8 @@ h5 {
 /*}*/
 
 .btn-circle {
-    width: 95px;
-    height: 95px;
+    width: 105px;
+    height: 105px;
     text-align: center;
     padding: 6px 0;
     font-size: 12px;
@@ -128,8 +128,8 @@ h1, h2, h3, h4, h5, h6 {
 .circleBase {
     border-radius: 50%;
     float: right;
-    margin-top: .25em;
-    margin-left: .25em;
+    /*margin-top: .25em;*/
+    /*margin-left: .25em;*/
 }
 
 .type4 {
@@ -177,13 +177,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .banner>img {
-    height: 150px;
-    width: 150px;
-    margin-top: -70px;
+    height: 105px;
+    width: 105px;
+    margin-top: -75px;
+    position: relative;
 }
 
 .container2 {
     text-align: center;
+    margin-top: 25px;
 }
 
 .small-title {
@@ -228,9 +230,29 @@ h1, h2, h3, h4, h5, h6 {
 .nav2 {
     float: right;
     text-align: center;
+    margin-right: 100px;
 }
 
 .nav1 {
     float: left;
     text-align: center;
+    margin-left: 100px;
+
+}
+
+.cir-right {
+    text-align: right;
+}
+
+.cir-left {
+    /*text-align: left;*/
+}
+
+@media only screen and (max-width: 600px;) {
+    .container2 {
+        margin-top: 25px;
+    }
+    .cir-left>div {
+        text-align: left;
+    }
 }
